# amplify-hosting-shared-cache-demo-lambda-extension

./: README.md
demo-lambda-cdk/: cdk.json  package.json  pnpm-lock.yaml  tsconfig.json
demo-lambda-cdk/lib/: demo-lambda-cdk-stack.ts
demo-lambda-cdk/test/: demo-lambda-cdk.test.ts
demo-lambda-extension/: Cargo.toml
demo-lambda-extension/src/: handlers.rs  main.rs  routes.rs
demo-lambda-handler/: package.json  pnpm-lock.yaml  tsconfig.json
demo-lambda-handler/src/: index.ts  key-value-storage.ts
