[package]
name = "demo-lambda-extension"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-types = "1.1.7"
aws-config = "1.1.5"
log = "0.4"
warp = "0.3.6"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lambda-extension = "0.10.0"
futures = "0.3"
